Add file artifact references
